--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <img src="http://i.imgur.com/espB8pV.png">
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="k5WQZzDRVtw" data-toggle="modal" data-target="#trailer">
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="Y4KrdjAPohc" data-toggle="modal" data-target="#trailer">
     <img src="http://www.joblo.com/posters/images/full/babadook_poster.jpg" width="220" height="342">
     <h2>The Babadook</h2>
     <div>A descent into madness for both the characters and the audience. The Babadook had me questioning my own sanity. Can't recall any other horror quite as effective.</div>
